# substrate

./: .gitignore  Dockerfile  LICENSE  README.md  chainlit.en-US.md  chainlit.md  config.yaml  env.example  pyproject.toml  requirements.txt
.chainlit/: config.toml
app/: app.py  generation.py  judge.py  retrieval.py
data/: bm25_function.pkl
eval/: calibrate_test_cases.py  eval_baseline.py  eval_rag.py  eval_retrieval.py  test_queries.yaml
eval/results/: baseline.json  rag_eval_a1.json  rag_eval_a2.json  rag_eval_a3.json  rag_eval_a4.json  rag_eval_a5.json  retrieval_eval.json  retrieval_eval_fixed.json  retrieval_eval_function.json  retrieval_eval_recursive.json
pipeline/: build_bm25.py  clone_repos.py  embed_and_upsert.py  parse_functions.py  parse_repos.py
public/: theme.json
