[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "substrate"
version = "0.1.0"
description = "Cross-repo code reasoning via advanced RAG - function-boundary chunking, hybrid retrieval, LLM-as-Judge evaluation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "app*", "eval*", "ablation*"]

[tool.ruff]
line-length = 100
target-version = "py310"
